--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'T'
 - !lcsh 'Inventions'
+- GITenberg
 tableOfContents: The match -- The stove -- The lamp -- The forge -- The steam-engine
   -- The plow -- The reaper -- The mill -- The loom -- The house -- The carriage --
   The boat -- The clock -- The book -- The message.
